manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-gke-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-gke
  template:
    metadata:
      labels:
        app: java-gke
    spec:
      containers:
        - name: app
          image: us-east1-docker.pkg.dev/splendid-map-423700-r8/obiwan/java-app
          ports:
            - containerPort: 8080
