manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-gke-service
spec:
  type: LoadBalancer
  selector:
    app: java-gke
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
